--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 </script>
 </head>
 <body>
+<h1 align=center>QAZ Encoded Decoder</h2>
 <h2 align=center>Roman Alphabet to QAZ Notation</h2>
 <div align=center>
 Convert text in Roman Alphabet (e.g. QJB) to QAZ notation (e.g. Q1A7Z5).
